--- a/src/app/auth/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/registro-usuario/registro-usuario.component.html
@@ -24,8 +24,6 @@
                     </option>
                 </select>
             </div>
-        </div>
-        <div class="form-group m-form__group row">
             <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
                 Nombre Empresa:
             </label>
@@ -36,6 +34,9 @@
                     <p class="m--font-danger" *ngIf="empresa.hasError('required')">El nombre de empresa es requerido</p>
                 </section>
             </div>
+        </div>
+        <div class="form-group m-form__group row">
+           
             <label class="col-lg-2 col-form-label">
                 Cédula:
             </label>
@@ -58,8 +59,6 @@
                     <p class="m--font-danger" *ngIf="nombre.hasError('required')">El nombre es requerido</p>
                 </section>
             </div>
-        </div>
-        <div class="form-group m-form__group row">
             <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
                 Nombre Contacto:
             </label>
@@ -70,6 +69,9 @@
                     <p class="m--font-danger" *ngIf="nombre.hasError('required')">El nombre es requerido</p>
                 </section>
             </div>
+        </div>
+        <div class="form-group m-form__group row">
+           
             <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 1">
                 Apellido
             </label>
@@ -90,10 +92,10 @@
                     <p class="m--font-danger" *ngIf="apellido.hasError('required')">El apellido es requerida</p>
                 </section>
             </div>
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 1">
+            <label class="col-lg-2 col-form-label" >
                 Dirección
             </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 1">
+            <div class="col-lg-3">
                 <input type="text" class="form-control m-input" placeholder="Dirección"
                        ngModel #direccion="ngModel" name="direccion" required>
                 <section *ngIf="direccion.invalid && direccion.dirty" class="bs">
@@ -102,16 +104,7 @@
             </div>
         </div>
         <div class="form-group m-form__group row">
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
-                Dirección
-            </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 2">
-                <input type="text" class="form-control m-input" placeholder="Dirección"
-                       ngModel #direccion="ngModel" name="direccion" required>
-                <section *ngIf="direccion.invalid && direccion.dirty" class="bs">
-                    <p class="m--font-danger" *ngIf="direccion.hasError('required')">La dirección es requerida</p>
-                </section>
-            </div>
+            
             <label class="col-lg-2 col-form-label">
                 País
             </label>
@@ -126,10 +119,10 @@
                     </option>
                 </select>
             </div>
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 1">
+            <label class="col-lg-2 col-form-label" >
                 Provincia
             </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 1">
+            <div class="col-lg-3" >
                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!provincias">
                     <input type="text" class="form-control"/>
                 </div>
@@ -142,20 +135,6 @@
             </div>
         </div>
         <div class="form-group m-form__group row">
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
-                Provincia
-            </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 2">
-                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!provincias">
-                    <input type="text" class="form-control"/>
-                </div>
-                <select *ngIf="provincias"  class="form-control m-input" placeholder="Provincia" (change)="getCiudades(provincia_id.value)"
-                ngModel #provincia_id="ngModel" name="provincia_id" required>
-                    <option *ngFor="let provincia of provincias" [value]="provincia.id" >
-                        {{provincia.nombre}}
-                    </option>
-                </select>
-            </div>
             <label class="col-lg-2 col-form-label" >
                 Ciudad
             </label>
@@ -164,28 +143,30 @@
                     <input type="text" class="form-control"/>
                 </div>
                 <select *ngIf="ciudades" ngModel class="form-control m-input" placeholder="Ciudad"
-                        #ciudad_id="ngModel" name="ciudad_id" required>
+                        #ciudad_id="ngModel" name="ciudad_id" required (change)="getParroquias(ciudad_id.value)">
                     <option *ngFor="let ciudad of ciudades" [value]="ciudad.id" >
                         {{ciudad.nombre}}
                     </option>
                 </select>
             </div>
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 1">
-                Código Postal:
-            </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 1">
-                <input type="text" class="form-control m-input" placeholder="Código Postal"
-                       ngModel #codigo_postal="ngModel" name="codigo_postal" required>
-                <section *ngIf="codigo_postal.invalid && codigo_postal.dirty" class="bs">
-                    <p class="m--font-danger" *ngIf="codigo_postal.hasError('required')">El Código Postal es requerido</p>
-                </section>
-            </div>
+            <label class="col-lg-2 col-form-label" >
+                  Parroquía:
+              </label>
+              <div class="col-lg-3">
+                  <select class="form-control m-input" placeholder="Parroquía"
+                          ngModel #parroquia_id="ngModel" name="parroquia_id">
+                      <option [value]="" disabled>Seleccione una Parroquía</option>
+                      <option *ngFor="let p of parroquias" [value]="p.id" >
+                          {{p.nombre}}
+                      </option>
+                  </select>
+              </div>
         </div>
         <div class="form-group m-form__group row">
-            <label class="col-lg-2 col-form-label" *ngIf="tipo_registro == 2">
+            <label class="col-lg-2 col-form-label" >
                 Código Postal:
             </label>
-            <div class="col-lg-3" *ngIf="tipo_registro == 2">
+            <div class="col-lg-3">
                 <input type="text" class="form-control m-input" placeholder="Código Postal"
                        ngModel #codigo_postal="ngModel" name="codigo_postal" required>
                 <section *ngIf="codigo_postal.invalid && codigo_postal.dirty" class="bs">
